--- a/index.html
+++ b/index.html
@@ -141,7 +141,14 @@
 			<p><a href="https://portalfap.emfa.pt/codigo-001.001.028.001.003" class="btn btn-warning" target="_blank">TAM (portal)</a></p>
 			<p><a href="https://drive.google.com/drive/u/1/folders/1pOzb9DoHOUvBH1APs7gZZfoHRkpbfdlu" class="btn btn-warning" target="_blank">cEsqlha 20/21</a></p>
 
-			<p><a href="https://docs.google.com/document/d/1nc23T2iRwRdovNCU_Wz98ZXbfCwzs3Vm/edit" class="btn btn-warning" target="_blank">Agenda</a></p>
+			<p><a href="" class="btn btn-warning" target="_blank">Agenda</a></p>
+<p>
+<div class="btn-group" role="group" aria-label="Basic example">
+  <a class="btn btn-warning" href="https://docs.google.com/document/d/1nc23T2iRwRdovNCU_Wz98ZXbfCwzs3Vm/edit" target="_blank">Agenda</a>
+  <a class="btn btn-warning" href="https://docs.google.com/document/d/1o9AfYqdRR7lsPq5RSDswaPXg2gyTeVW3/edit?dls=true" target="_blank">Arquivo</a>
+</div>
+</p>
+
 
 
 
