--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <p>
 <div class="btn-group" role="group" aria-label="Basic example">
   <a class="btn btn-warning" href="https://drive.google.com/drive/u/0/folders/17KgcHZW_MtMIt4gJJbrmxbyEZ88rOcqR" target="_blank">CAL_GERAL</a>
-  <a href="https://docs.google.com/spreadsheets/d/1bDbXkXEn9OpHHnSd7lBGZ_BPPbB8iHIiP2Gxzereh9w/edit#gid=926774573" class="btn btn-warning" target="_blank">MapaGM</a>
+  <a href="https://docs.google.com/spreadsheets/d/1JFiFZI3VsuhFzX5BoD_kEJrgdZLNDUOc196ZrM2QgrM/edit" class="btn btn-warning" target="_blank">MapaGM</a>
 </div>
 </p>
 	    
