--- a/index.html
+++ b/index.html
@@ -119,13 +119,7 @@
 </div>
 </p>
 	  
-<p>
-<div class="btn-group" role="group" aria-label="Basic example">
-  <a class="btn btn-warning" href="https://docs.google.com/spreadsheets/d/1BI0ma-TWWjkP6TwQ5AX-6SA8CXd36aO78owhYU9MZK0/edit#gid=0" target="_blank">3a Sit.</a>
-  <a class="btn btn-warning" href="https://drive.google.com/drive/u/0/folders/1_l2EcWKpUDNa7pkys1lj5MSqnQtAs6aX" target="_blank">3a Pasta</a>
-</div>
-</p>
-	
+
 <p>
 <div class="btn-group" role="group" aria-label="Basic example">
   <a class="btn btn-warning" href="https://docs.google.com/spreadsheets/d/1SWwyVVbVYnm6t-swrPKgx7k56XLBKLIC13cozDXg-SA/edit?usp=drive_web&ouid=110151906367241589539" target="_blank">6a Sit.</a>
@@ -134,6 +128,7 @@
 </p>
 
 			
+			<p><a href="https://docs.google.com/spreadsheets/d/1FFHINszBrWtKoAJPGVtd5YNsAtS_6lGW/edit#gid=1181940000" class="btn btn-warning" target="_blank">Quantitativo Recolher</a></p>
 
 			<p><a href="https://docs.google.com/spreadsheets/d/1b7t99eXhIRJP___EzeKOsrRGIcSbCFsGazUjI2ZKiWE/edit?usp=drive_web&ouid=112240959440930887189" class="btn btn-warning" target="_blank">SITUACAO CAL</a></p>
 			<p><a href="https://docs.google.com/spreadsheets/d/1kus-tEzYA0n15rUuiBgUi2Oo_qtjyhgiNMjBmGo0dk8/edit?usp=drive_web&ouid=112240959440930887189" class="btn btn-warning" target="_blank">Contactos</a></p>
@@ -164,9 +159,9 @@
 			<p><a href="https://docs.google.com/spreadsheets/d/1PkCbHPZL15isUy1t98_Smya07fXlJZqwgsQjtw8a5aA/edit#gid=986409403?authuser=akins.daos@gmail.com" class="btn btn-secondary" target="_blank">Alojamentos Mapa Geral</a></p>
 			<p><a href="https://docs.google.com/spreadsheets/u/1/d/12id0lmuaLKXLXz22UL7W8jgPBEG7zGZsgm4_--pREjY" class="btn btn-primary" target="_blank">Gestão anomalias</a></p>
 			<p><a href="https://docs.google.com/document/d/14DzfDypG4U-k18CdCz24FtbrH1YVjAIal2ES-TclxFM/edit#" class="btn btn-primary" target="_blank">Checklists</a></p>
-			
-			
+			<p><a href="https://docs.google.com/spreadsheets/d/19G_DUgw_Tg_QtUVYzVahBvp3WIk-v8i1/edit?usp=drive_web&ouid=110151906367241589539&rtpof=true" class="btn btn-primary" target="_blank">Quartos Isolamento COVID</a></p>
 
+			
 			
 			
 		</div> <!-- ROW 2 COL 1 -->
