added vidulum to workspace

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 	  
 <div class="col p-3 mb-2 bg-success text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 1 COL 3 -->
 	<h2>Workspace</h2>
+	<p><a href="https://drive.google.com/drive/folders/1Kqk0u0kkcv-RjXWXLvUFalN2SPILoBgp" class="btn btn-info">Vidulum folder</a></p>
+	<p><a href="https://docs.google.com/document/d/1l9Zzp_gXvBA5pNxeR1o5hUt0-PLZts1rpdXwG6CnQ7o/edit#heading=h.72yyaeghy55y" class="btn btn-info">Vidulum doc</a></p>
+	<p><a href="https://github.com/diogo-aos/Vidulum/tree/0.1" class="btn btn-info">Vidulum rep</a></p>
 	</div> <!-- END ROW 1 COL 3 -->
 	  
 	  
