--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="row">  <!-- ROW 1 -->
 	
 	
-      <div class="col p-3 mb-2 bg-success text-white">  <!-- ROW 1 COL 1 -->
+      <div class="col-md-auto bg-success text-white">  <!-- ROW 1 COL 1 -->
 	    <h2>Diogo</h2>
 		<p><a href="https://drive.google.com/drive/folders/0B3EM8f4FmVDVd2lrYWFJbkh2eWM" class="btn btn-light " target="_blank">0 Diogo</a></p>
 		
