--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	      <p><a href="https://www.degiro.pt/" class="btn btn-light " target="_blank">Degiro</a></p>
       </div> <!-- END ROW 1 COL 1 -->
 	  
-	  <div class="col p-3 mb-2 bg-primary text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 1 COL 2 -->
+	  <div class="col-md-auto bg-primary text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 1 COL 2 -->
 		  <h2>Utilities</h2>
 		  <p><a href="https://cmd.autenticacao.gov.pt/Ama.Authentication.Frontend/Processes/DigitalSignature/DigitalSignatureIntro.aspx" class="btn btn-info">Assinar CC</a></p>
 		  <p><a href="https://dicionario.priberam.org/" class="btn btn-info">DLPO</a></p>
@@ -78,12 +78,20 @@
 		  <p><a href="https://repl.it/" class="btn btn-info" target="_blank">REPL</a></p>
       </div> <!-- END ROW 1 COL 2 -->
 	  
-<div class="col p-3 mb-2 bg-success text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 1 COL 3 -->
+<div class="col-md-auto bg-success text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 1 COL 3 -->
 	<h2>Workspace</h2>
 	<p><a href="https://drive.google.com/drive/folders/1Kqk0u0kkcv-RjXWXLvUFalN2SPILoBgp" class="btn btn-info">Vidulum folder</a></p>
 	<p><a href="https://docs.google.com/document/d/1l9Zzp_gXvBA5pNxeR1o5hUt0-PLZts1rpdXwG6CnQ7o/edit#heading=h.72yyaeghy55y" class="btn btn-info">Vidulum doc</a></p>
 	<p><a href="https://github.com/diogo-aos/Vidulum/tree/0.1" class="btn btn-info">Vidulum rep</a></p>
-	</div> <!-- END ROW 1 COL 3 -->
+</div> <!-- END ROW 1 COL 3 -->
+	    
+<div class="col-md-auto bg-success text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 1 COL 3 -->
+	<h2>Quotes</h2>
+	<p>"I can think, I can wait, I can fast." Siddartha</p>
+	<p>"If you genuinely care about the goal, you’ll focus on the system." James Clear</p>
+	<p>Before you speak: Does this need to be said? by me? right now?
+</p>
+</div> <!-- END ROW 1 COL 3 -->
 	  
 	  
     </div> <!-- END ROW 1 -->
