--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	<p><a href="https://github.com/diogo-aos/Vidulum/tree/0.1" class="btn btn-info">Vidulum rep</a></p>
 </div> <!-- END ROW 1 COL 3 -->
 	    
-<div class="col-md-auto bg-success text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 1 COL 3 -->
+<div class="col-md-auto bg-dark text-white" class="p-3 mb-2 bg-light text-dark"> <!-- ROW 1 COL 3 -->
 	<h2>Quotes</h2>
 	<p>"I can think, I can wait, I can fast." Siddartha</p>
 	<p>"If you genuinely care about the goal, you’ll focus on the system." James Clear</p>
