--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 	<h2>Quotes</h2>
 	<p>"I can think, I can wait, I can fast." Siddartha</p>
 	<p>"If you genuinely care about the goal, you’ll focus on the system." James Clear</p>
-	<p>Before you speak: Does this need to be said? by me? right now?
-</p>
+	<p>Before you speak: Does this need to be said? by me? right now?</p>
+	<p>The best exercise is to never miss a workout.</p>
 </div> <!-- END ROW 1 COL 3 -->
 	  
 	  
