--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     <a href="https://todoist.com/app/"  target="_blank">
 	    <img src="todoist.png" class="img-circle" alt="Todoist" width="50px">
     </a>
+		  
+    <a href="https://www.notion.so"  target="_blank">
+	    <img src="notion.png" class="img-circle" alt="Todoist" width="50px">
+    </a>
 	  
     <a href="https://calendar.google.com/" target="_blank">
         <img src="cal.png" class="img-circle" alt="GCalendar" width="50px">
