--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </a>
 		  
     <a href="https://www.notion.so"  target="_blank">
-	    <img src="notion.png" class="img-circle" alt="Todoist" width="50px">
+	    <img src="notion.jpeg" class="img-circle" alt="Todoist" width="50px">
     </a>
 	  
     <a href="https://calendar.google.com/" target="_blank">
