--- a/index.html
+++ b/index.html
@@ -126,6 +126,14 @@
   <a href="https://docs.google.com/spreadsheets/d/1JFiFZI3VsuhFzX5BoD_kEJrgdZLNDUOc196ZrM2QgrM/edit" class="btn btn-warning" target="_blank">MapaGM</a>
 </div>
 </p>
+
+<p>
+<div class="btn-group" role="group" aria-label="Basic example">
+  <a class="btn btn-warning" href="https://docs.google.com/spreadsheets/d/1r3rfMGNISDrRrlk1qKO4PLd2ofW7TNRO/edit?usp=drive_web&ouid=110151906367241589539&rtpof=true
+" target="_blank">4a Sit.</a>
+  <a href="https://drive.google.com/drive/u/0/folders/1TwrnIRePHE4zIJY-lfHQCUSdP7bT7X2t" class="btn btn-warning" target="_blank">4a pasta</a>
+</div>
+</p>
 	    
 <p>
 <div class="btn-group" role="group" aria-label="Basic example">
