--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
 
 <p>
 <div class="btn-group" role="group" aria-label="Basic example">
-  <a class="btn btn-warning" href="https://docs.google.com/spreadsheets/d/1SWwyVVbVYnm6t-swrPKgx7k56XLBKLIC13cozDXg-SA/edit?usp=drive_web&ouid=110151906367241589539" target="_blank">6a Sit.</a>
-  <a class="btn btn-warning" href="https://drive.google.com/drive/u/0/folders/17ZYr2TKDHzBU5s-RcFVVYM_-7NR_3Czp" target="_blank">6a Pasta</a>
+  <a class="btn btn-warning" href="https://docs.google.com/spreadsheets/d/1mjJvWsI9j3FTHs4RTRu97Bra3HqJ8yxymlCqJX6Yt20/edit?usp=sharing" target="_blank">4a Sit.</a>
+  <a class="btn btn-warning" href="https://drive.google.com/drive/u/0/folders/17ZYr2TKDHzBU5s-RcFVVYM_-7NR_3Czp" target="_blank">4a Pasta</a>
 </div>
 </p>
 
